Crash when deleting last face using adaptive subdivision in render shading mode #71878

Closed
opened 2019-11-25 07:06:21 +01:00 by Joseph Masaki · 8 comments

System Information
Operating system: Linux-4.15.0-70-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.50

Blender Version
Older Version: blender-2.79-e045fe53f1b0-linux-glibc217-x86_64 date: 2019-06-27 10:41
Latest Version: 2.82 (sub 1), branch: master, commit date: 2019-11-20 21:25, hash: ba1e9ae473

Worked: Unknown

Short description of error
When in render shade mode deleting the last face will crash blender.

Exact steps for others to reproduce the error

  • Open Blender.
  • Switch to Cycles.
  • Change Feature set to Experimental.
  • Add "Subdivision Surface" modifier to default cube.
  • Make "Subdivision Surface" modifier Adaptive by checking box.
  • Switch to Rendered Shade Mode.
  • Enter edit mode.
  • Delete all vertices
**System Information** Operating system: Linux-4.15.0-70-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.50 **Blender Version** Older Version: blender-2.79-e045fe53f1b0-linux-glibc217-x86_64 date: 2019-06-27 10:41 Latest Version: 2.82 (sub 1), branch: master, commit date: 2019-11-20 21:25, hash: `ba1e9ae473` Worked: Unknown **Short description of error** When in render shade mode deleting the last face will crash blender. **Exact steps for others to reproduce the error** - Open Blender. - Switch to Cycles. - Change Feature set to Experimental. - Add "Subdivision Surface" modifier to default cube. - Make "Subdivision Surface" modifier Adaptive by checking box. - Switch to Rendered Shade Mode. - Enter edit mode. - Delete all vertices
Author

Added subscriber: @JosephMasaki

Added subscriber: @JosephMasaki

#72281 was marked as duplicate of this issue

#72281 was marked as duplicate of this issue

Added subscriber: @AnthonyEdlin

Added subscriber: @AnthonyEdlin

Hi, thanks for report.

Can confirm here. 2.80 and up.

Hi, thanks for report. Can confirm here. 2.80 and up.

Added subscriber: @valera-8

Added subscriber: @valera-8

This issue was referenced by blender/cycles@85ef0635e4

This issue was referenced by blender/cycles@85ef0635e41a31e6b06b81c0f537e459d1aa832f

This issue was referenced by 761111efb8

This issue was referenced by 761111efb8e40fa030cb48761df8c066d0e43ae5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-12-08 19:50:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71878
No description provided.