Fix T71878: Cycles crash with adaptive subdivision and empty mesh